--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,5 @@ commands =
 deps = 
 	flake8
 commands =
-	flake8 tuitse test --exclude=venv,__pycache__,*/migrations/* --show-source --count --ignore W503
+	flake8 tuitse test --exclude=venv,__pycache__,*/migrations/* --show-source --count --ignore=W503,E501
 
