--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,10 @@ deps =
 	beautifulsoup4
 	django
 commands =
-	python manage.py test
+	python manage.py test {posargs}
 
 [testenv:flake8]
 deps = 
 	flake8
 commands =
 	flake8 tuitse test --exclude=venv,__pycache__,*/migrations/* --show-source --count --ignore=W503,E501
-
