--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,5 @@ commands =
 deps = 
 	flake8
 commands =
-	flake8 tuitse test --exclude=venv,__pycache__,*/migrations/* --show-source --count --ignore=W503,E501
+	flake8 tuitse --exclude=venv,__pycache__,*/migrations/* --show-source --count
+	flake8 test --exclude=venv,__pycache__,*/migrations/* --show-source --count --ignore=E501
