kah連字符有底代--ê khioh出來這ê PR。

--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,14 @@
 
 [testenv:test]
 deps = 
-	-rrequirements.txt
+	beautifulsoup4
+	django
 commands =
-	python manage.py test
+	python manage.py test {posargs}
 
 [testenv:flake8]
 deps = 
 	flake8
 commands =
-	flake8 tuitse test --exclude=venv,__pycache__,*/migrations/* --show-source --count --ignore=W503,E501
-
+	flake8 tuitse --exclude=venv,__pycache__,*/migrations/* --show-source --count
+	flake8 test --exclude=venv,__pycache__,*/migrations/* --show-source --count --ignore=E501
