--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
         provider: pypi
         skip_cleanup: true
         user: "__token__"
-        password: ${PYPI_TOKEN}
+        password: ${PYPI_API_TOKEN}
         on:
           tags: true
           distributions: sdist bdist_wheel
