* CI test加sonar-scanner.

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,10 @@
 deps = 
 	beautifulsoup4
 	django
+	coverage
 commands =
-	python manage.py test {posargs}
+	coverage run manage.py test {posargs}
+	coverage xml
 
 [testenv:flake8]
 deps = 
