--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: jammy
 jdk: openjdk17
 language: python
 python:
-- '3.8'
 - '3.9'
 branches:
   only:
@@ -17,7 +16,8 @@ jobs:
       script:
       - tox -e flake8
     - stage: deploy
-      python: '3.9'
+      name: pypi
+      if: branch ~= /\d+\.\d+\.\d+/
       install: skip
       script: skip # skip test scripts
       deploy:
