--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,17 @@ branches:
   - "/\\d+\\.\\d+\\.\\d+/"
 jobs:
   include:
+    - name: test
+      install:
+      - pip install tox
+      - pip install setuptools --upgrade
+      addons:
+        sonarcloud:
+          organization: "ithuan"
+          token: ${SONAR_TOKEN}
+      script:
+      - tox -e test
+      - sonar-scanner
     - name: flake8
       install:
       - pip install tox
