--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ jobs:
       - tox -e flake8
     - stage: deploy
       name: pypi
+      if: branch ~= /\d+\.\d+\.\d+/
       install: skip
       script: skip # skip test scripts
       deploy:
