--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ jobs:
       script:
       - tox -e flake8
     - stage: deploy
+      name: pypi
       install: skip
       script: skip # skip test scripts
       deploy:
