--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
       script:
       - tox -e flake8
     - stage: deploy
+      if: branch ~= /\d+\.\d+\.\d+/
       name: pypi
       install: skip
       script: skip # skip test scripts
