--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
       - >
         docker run --rm
         -e SONAR_TOKEN="${SONAR_TOKEN}"
-        -v "`pwd`:/usr/src" \
+        -v "`pwd`:/usr/src"
         sonarsource/sonar-scanner-cli
     - name: flake8
       install:
