--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.host.url=https://sonarcloud.io
 sonar.projectKey=i3thuan5_TuiTse-TsuSin
 sonar.organization=ithuan
 sonar.python.coverage.reportPaths=coverage.xml
