--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@ jobs:
         -e SONAR_TOKEN="${SONAR_TOKEN}"
         -v "`pwd`:/usr/src"
         sonarsource/sonar-scanner-cli
+      - cat ${TRAVIS_HOME}/.sonarscanner/sonar-scanner/conf/sonar-scanner.properties
+      addons:
+        sonarcloud:
+          token: ${SONAR_TOKEN}
     - name: flake8
       install:
       - pip install tox
