--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jobs:
       - tox -e test
       - >
         docker run --rm
+        -e SONARQUBE_SCANNER_PARAMS
         -e SONAR_TOKEN="${SONAR_TOKEN}"
         -v "`pwd`:/usr/src"
         sonarsource/sonar-scanner-cli
