--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ jobs:
       - pip install setuptools --upgrade
       service:
       - docker
+      addons:
+        # For the `SONARQUBE_SCANNER_PARAMS` variable
+        sonarcloud:
+          token: ${SONAR_TOKEN}
       script:
       - printenv
       - tox -e test
@@ -24,10 +28,6 @@ jobs:
         -e SONAR_TOKEN="${SONAR_TOKEN}"
         -v "`pwd`:/usr/src"
         sonarsource/sonar-scanner-cli
-      - cat ${TRAVIS_HOME}/.sonarscanner/sonar-scanner/conf/sonar-scanner.properties
-      - docker run --rm sonarsource/sonar-scanner-cli cat /opt/sonar-scanner/conf/sonar-scanner.properties
-      addons:
-        sonarcloud:
     - name: flake8
       install:
       - pip install tox
